fixing centering issues on mobile

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -138,6 +138,10 @@ navbar li {
 }
 
 @media only screen and (max-width: 700px) {
+  body {
+    margin: 0 auto;
+    width: 100%;
+  }
   .mobile-div {
     display: block;
   }
